added base endpoints
