# internal/models/models.go
@@ -1,12 +1,30 @@
 package models
 
-import "time"
+import (
+	"time"
+
+	"github.com/google/uuid"
+)
 
 type User struct {
-	Id        int64
+	Id        uuid.UUID
 	Name      string
 	Email     string
 	TigrId    string
 	Rating    int64
 	CreatedAt time.Time
+}
+
+type Tournament struct {
+	Id        uuid.UUID
+	Name      string
+	Date      time.Time
+	CreatedAt time.Time
+}
+
+type Player struct {
+	Id           uuid.UUID
+	TournamentId uuid.UUID
+	UserId       uuid.UUID
+	MacMahon     int64
 }
